# mol_opt

./: .gitignore  CONTRIBUTE.md  CONTRIBUTED.md  LICENSE  README.md  labelling.py  make_run_prod.sh  make_run_prod_split.sh  molopt.yml  requirements.txt  run.py  run.sh  setup.py  test_oracle.sh  tune.sh
main/molpal/: .bumpversion.cfg  LICENSE  README.md  environment.yml  hparams_default.yaml  hparams_tune.yaml  hyperopt.py  pyproject.toml  run.py  run_molpal.batch  run_original.py  setup.cfg
main/molpal/examples/config/: Enamine10k_online.ini  Enamine10k_retrain.ini  Enamine50k_online.ini  Enamine50k_retrain.ini  EnamineHTS_converge.ini  EnamineHTS_online.ini  EnamineHTS_retrain.ini  EnamineHTS_single_batch.ini  config_AmpC_online.ini  config_AmpC_retrain.ini  config_D4.ini  minimal_config.ini  sample_config.ini
main/molpal/examples/objective/: Enamine10k_lookup.ini  Enamine50k_lookup.ini  EnamineHTS_lookup.ini  docking.ini
main/molpal/molpal/: __init__.py  args.py  explorer.py  featurizer.py  utils.py
main/molpal/molpal/acquirer/: __init__.py  acquirer.py  metrics.py
main/molpal/molpal/models/: __init__.py  base.py  mpnmodels.py  nnmodels.py  random.py  sklmodels.py
main/molpal/molpal/objectives/: __init__.py  base.py  docking.py  lookup.py  (+1 more)
main/molpal/molpal_50k/: config.ini
main/molpal/scripts/: curves.py  experiment.py  fingerprints.py  histogram.py  make_dict.py  preds.py  submit_molpal.py  subsample_csv.py  trajectories.py  trajectories_AmpC2M.py  umap_fig.py  unions.py  utils.py
main/molpal/tests/: test_acquirer.py  test_lookup.py  test_metrics.py
(+974 files in other folders)
