[metadata]
name = molpal
version = 1.0.2
author = david graff
author_email = deg711@g.harvard.edu
description = active learning to accelerate virtual drug discovery
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
url = https://github.com/coleygroup/molpal
platforms = Linux, Mac OS-X, Unix

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires = 
	configargparse
	h5py
	numpy
	ray[default] >= 1.7
	scikit_learn
	tensorflow
	tensorflow_addons
	tqdm

[options.extras_require]
dev =
	black
	bumpversion
	flake8
	pre-commit
	pytest
plot = 
	matplotlib
	seaborn
test = pytest
